# procurepilot

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py  models.py
app/agent/: extractor.py  hybrid_extractor.py  rag.py  workflow.py
app/data/: boundary_cases.json  business.json  demo_cases.json  evaluation_cases.json  policies.json
app/llm/: __init__.py  provider.py
app/services/: store.py
app/static/: app.js  index.html  styles.css
app/tools/: __init__.py  business_tools.py
docs/: architecture.md  evaluation.md
reports/: evaluation-report.md
scripts/: check_boundary_cases.py  check_llm_compliance_flag.py  evaluate.py
